# aisuclean

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dir.rs  main.rs  utils.rs
