[package]
name = "aisuclean"
version = "0.1.0"
edition = "2021"
authors = ["aisuneko"]
description = "Simple, stupid and portable folder cleaner"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aisuneko/aisuclean"
repository = "https://github.com/aisuneko/aisuclean"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.5", features = ["derive"]}
indicatif = "0.17.5"
walkdir = "2.3.3"

[profile.release]
strip = true 
lto = true